# comut

./: .coverage  .coveragerc  .gitignore  .gitlab-ci.yml  Makefile  README.md  codecov.yml  coverage.xml  setup.cfg
comut/: comut.py
examples/: documentation.ipynb  quickstart.ipynb
examples/tutorial_data/: tutorial_error_bars.tsv  tutorial_mutated_samples.tsv  tutorial_symbols.tsv
tests/: test_comut.py
