[metadata]
name =  comut
description = "Python GUI for drawing plots in oncoplot-style."
license = MIT License 
version = 1.0.1
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = 
    comut
install_requires = 
    numpy >= 1.18.1
    matplotlib >= 3.1.1
    pandas >= 0.25.3
    palettable >= 3.1.1

